# tree-sitter-svg

./: .dprint.jsonc  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Cargo.toml  DISCOVERIES.md  Makefile  Package.swift  README.md  README_MINIMAL_TECHNICAL.md  README_SPECIFIC_DETAILED.md  README_STANDARD_OPENSOURCE.md  SPEC_AUDIT.md  UNTYPED_SVG2_ATTRIBUTES.md  UNTYPED_SVG2_ATTRIBUTES.txt  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter.json  tsconfig.json
.githooks/: pre-commit
.github/workflows/: ci.yml  regex-harness.yml
.tasks/: task1-scanner-docs.md  task2-grammar-fixes.md  task3-highlights-injections.md  task4-editor-queries.md
.zed/: settings.json
bindings/c/: tree-sitter-svg.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
docs/plans/: 2026-03-20-grammar-refactor-design.md  2026-03-20-grammar-refactor.md
queries/: brackets.scm  highlights.scm  indents.scm  injections.scm  locals.scm  outline.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: document.txt  edge_cases.txt  errors.txt  long_tail_attributes.txt  misc_nodes.txt  path_grammar.txt  svg_features.txt  typed_attributes.txt
test/regex_samples/: doc.json  doc.yaml  doctype_svg_but_not_root.xml  html_inline_svg.html  manifest.json  mathml.xml  regex_harness.test.ts  regex_harness.ts  rss_doc.xml  svg_comment_decl_then_root.xml  svg_comment_double_hyphen.xml  svg_comment_first.xml  svg_doctype.xml  svg_namespaced.xml  svg_prefix_decl.xml  svg_ws_then_root.xml  svg_xml_decl.xml  text_with_svg_word.txt  ttml_doc.ttml  (+7 more)
(+7 files in other folders)
