#:tombi lint = { disabled = true }

[package]
name         = "tree-sitter-svg"
version      = "0.1.0"
authors      = ["Kaj Kowalski <info@kajkowalski.nl>"]
edition      = "2021"
description  = "SVG grammar for Tree-sitter"
readme       = "README.md"
repository   = "https://github.com/kjanat/tree-sitter-svg"
license      = "MIT"
keywords     = ["incremental", "parsing", "svg", "tree-sitter"]
categories   = ["parser-implementations", "parsing", "text-editors"]
build        = "bindings/rust/build.rs"
include      = [
  "/LICENSE",
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]
autoexamples = false

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.26.7"

[build-dependencies]
cc = "1.2"
